# fastapi_langchain-boilerplate

./: .gitignore  README.md  pyproject.toml
service/: main.py
service/routers/: exemplo.py
